; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/lzma/liblzma/lzma/extr_lzma_encoder.c_lzma_lzma_encoder_memusage.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/lzma/liblzma/lzma/extr_lzma_encoder.c_lzma_lzma_encoder_memusage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UINT64_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @lzma_lzma_encoder_memusage(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @is_options_valid(i8* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = load i64, i64* @UINT64_MAX, align 8
  store i64 %10, i64* %2, align 8
  br label %23

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @set_lz_options(i32* %4, i8* %12)
  %14 = call i64 @lzma_lz_encoder_memusage(i32* %4)
  store i64 %14, i64* %5, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* @UINT64_MAX, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %11
  %19 = load i64, i64* @UINT64_MAX, align 8
  store i64 %19, i64* %2, align 8
  br label %23

20:                                               ; preds = %11
  %21 = load i64, i64* %5, align 8
  %22 = add nsw i64 4, %21
  store i64 %22, i64* %2, align 8
  br label %23

23:                                               ; preds = %20, %18, %9
  %24 = load i64, i64* %2, align 8
  ret i64 %24
}

declare dso_local i32 @is_options_valid(i8*) #1

declare dso_local i32 @set_lz_options(i32*, i8*) #1

declare dso_local i64 @lzma_lz_encoder_memusage(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
